<resources>
    <string name="app_name">IM_App2.0</string>


    <string name="action_settings">Settings</string>
    <string name="warn1">Password must be greater than 8 chars long and alphanumeric!</string>
    <string name="warn2">Email address must be in correct format!</string>
    <string name="regfail">Registration failed!!</string>
    <string name="phonenowarning">Please make sure phone number is correct format!</string>
    <string name="emailadd">Email:</string>
    <string name="password">Password:</string>
    <string name="phonenumber">Phone No:</string>
    <string name="register">Register</string>
    <string name="regdetails">registering device</string>
    <string name="title_activity_login">IM_App2.0</string>
    <string name="title_activity_intro">IM_App2.0</string>
    <string name="load1">Loading </string>
    <string name="load2">Loading .</string>
    <string name="load3">Loading . .</string>
    <string name="load4">Loading . . .</string>
    <string name="styloggedin">Remember Login?</string>
    <string name="login">Login</string>
    <string name="title_activity_main">IM_App2.0</string>
    <string name="error_wifi">Wifi is currently not available</string>
    <string name="error_conn">Error: Cant connect to server!</string>
    <string name="no_contacts">No Contacts Found!</string>
    <string name="no_chats">No Chats Found!</string>
    <string name="title_activity_chat">Im_App2.0</string>

    <string name="hello_world">Hello world!</string>

</resources>
