<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:id="@id/topPanel"
    android:background="@color/mainback"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".RegistrationActivity">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:id="@+id/relativeLayout">


        <LinearLayout
            android:id ="@+id/ly1"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:paddingBottom="5dp"
            android:paddingTop="5dp">



            <TextView
                android:id="@+id/tv1"
                android:text="@string/emailadd"
                android:layout_height="fill_parent"
                android:layout_width="fill_parent"
                android:textSize="15dp"
                android:layout_weight="1"
                android:gravity="center"
                android:background="@drawable/lefticon"
                android:textColor="@color/registerfont"
                ></TextView>

            <EditText
                android:layout_width="230dp"
                android:layout_height="fill_parent"
                android:id="@+id/edtxtemail"
                android:background="@drawable/righttext"
                android:layout_gravity="center_horizontal"
                android:textCursorDrawable="@drawable/color_cursor"/>

        </LinearLayout>

        <LinearLayout
            android:id ="@+id/ly2"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_below="@+id/ly1"
            android:layout_height="50dp"
            android:paddingBottom="5dp"
            android:paddingTop="5dp">


            <TextView
                android:id="@+id/tv2"
                android:layout_height="fill_parent"
                android:layout_width="fill_parent"
                android:text ="@string/password"
                android:textSize="15dp"
                android:gravity="center"
                android:background="@drawable/lefticon"
                android:layout_weight="1"
                android:textColor="@color/registerfont"

                />

            <EditText
                android:layout_width="230dp"
                android:layout_height="fill_parent"
                android:id="@+id/edtxtpass"
                android:background="@drawable/righttext"
                android:layout_gravity="center_horizontal"
                android:textCursorDrawable="@drawable/color_cursor"

                />
        </LinearLayout>

        <LinearLayout
            android:id ="@+id/ly3"
            android:orientation="horizontal"
            android:layout_below="@+id/ly2"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:paddingBottom="5dp"
            android:paddingTop="5dp"
            >



            <TextView
                android:id="@+id/tv3"
                android:text="@string/phonenumber"
                android:layout_height="fill_parent"
                android:layout_width="fill_parent"
                android:textSize="15dp"
                android:gravity="center"
                android:background="@drawable/lefticon"
                android:layout_weight="1"
                android:textColor="@color/registerfont" />

            <EditText
                android:layout_width="230dp"
                android:layout_height="fill_parent"
                android:id="@+id/edtxtphone"
                android:background="@drawable/righttext"
                android:layout_gravity="center_horizontal"
                android:textCursorDrawable="@drawable/color_cursor"/>

        </LinearLayout>


    </RelativeLayout>

    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:text="@string/register"
        android:id="@+id/button"
        android:textSize="15dp"
        android:textColor="@color/registerfont"
        android:background="@drawable/button_selector"
        android:layout_marginTop="50dp"
        android:layout_below="@+id/relativeLayout"
        android:layout_centerHorizontal="true"
        android:textStyle="bold" />

    <ProgressBar
        android:layout_marginTop="40dp"
        android:visibility="invisible"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/progressBar"
        android:layout_centerHorizontal="true" />


</RelativeLayout>
